# template

./: .pre-commit-config.yaml  README.md  setup.cfg  tox.ini
.github/workflows/: ci.yaml  docs.yaml  pages.yaml  wheels.yaml
